--- a/app/src/main/res/layout/pop_up_sammentykke.xml
+++ b/app/src/main/res/layout/pop_up_sammentykke.xml
@@ -11,27 +11,27 @@
 
 
     <Button
-        android:id="@+id/accepter"
+        android:id="@+id/decline"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
         android:gravity="center"
-        android:text="Godkendt!"
+        android:text="Afvis"
         android:textAllCaps="false"
-        app:layout_constraintEnd_toStartOf="@+id/afvis"
+        app:layout_constraintEnd_toStartOf="@+id/accept"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
-        android:id="@+id/afvis"
+        android:id="@+id/accept"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="50dp"
         android:gravity="center"
-        android:text="Afvis!"
+        android:text="Godkend"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
