--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -82,6 +82,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="48dp"
         android:checked="false"
+        android:buttonTint="@color/colorWhite"
         android:text="Forbliv logget ind"
         android:textColor="@color/colorWhite"
         android:textStyle="bold|italic"
