--- a/app/src/main/res/drawable/edittext_custom.xml
+++ b/app/src/main/res/drawable/edittext_custom.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorWhite"/>
+            <solid android:color="@color/colorRed"/>
             <stroke android:color="@color/colorBlack" android:width="2dp"/>
             <corners android:radius="15dp"/>
         </shape>
