--- a/app/src/main/res/drawable/header_bar_red.xml
+++ b/app/src/main/res/drawable/header_bar_red.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="#E20613"
+        android:color="@color/colorRed"
         />
     <padding
         android:left="0dp"
