--- a/app/src/main/res/drawable/patientinformation_textview.xml
+++ b/app/src/main/res/drawable/patientinformation_textview.xml
@@ -4,7 +4,7 @@
     <item>
 
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorWhite"/>
+            <solid android:color="@color/colorBackground"/>
             <stroke android:color="@color/colorBlack" android:width="1dp"/>
         </shape>
 
