--- a/app/src/main/res/drawable/login_background.xml
+++ b/app/src/main/res/drawable/login_background.xml
@@ -5,7 +5,7 @@
         android:angle="90"
         android:endColor="#802020"
         android:centerColor="#9f1717"
-        android:startColor="#fc0303"
+        android:startColor="#e82020"
         android:type="linear" />
     <corners
         android:radius="0dp"/>
