--- a/app/src/main/res/layout/ny_patient_frag.xml
+++ b/app/src/main/res/layout/ny_patient_frag.xml
@@ -12,153 +12,140 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/nameText"
+
+    <LinearLayout
+        android:id="@+id/box"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="66dp"
-        android:text="Opret ny patient"
-        android:textSize="36sp"
-        android:textColor="@color/lightBlack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/nameTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/nameTitle"
-        android:textSize="18sp"
-        android:textColor="@color/lightBlack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameText" />
-
-    <EditText
-        android:id="@+id/nameEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="37dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="2dp"
-        android:ems="10"
-        android:gravity="left"
-        android:hint="eks. Anders And"
-        android:inputType="textPersonName"
-        android:padding="10dp"
-        android:backgroundTint="@color/focused_tint"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameTitle" />
-
-    <TextView
-        android:id="@+id/idTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="24dp"
-        android:text="@string/idTitle"
-        android:textSize="18sp"
-        android:textColor="@color/lightBlack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
-
-    <EditText
-        android:id="@+id/patientID"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="37dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="2dp"
-        android:ems="10"
-        android:gravity="left"
-        android:hint="eks. p3"
-        android:inputType="textPersonName"
-        android:padding="10dp"
-        android:backgroundTint="@color/focused_tint"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idTitle" />
-
-    <TextView
-        android:id="@+id/mobilityTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="24dp"
-        android:text="@string/mobility"
-        android:textSize="18sp"
-        android:textColor="@color/lightBlack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/patientID" />
-
-    <SeekBar
-        android:id="@+id/mobilitySeekBar"
-        style="@style/Widget.AppCompat.SeekBar.Discrete"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="26dp"
-        android:layout_marginRight="61dp"
-        android:layout_marginTop="1dp"
-        android:max="4"
-        android:progress="2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mobilityTitle" />
-
-    <TextView
-        android:id="@+id/mobilityValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="441dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginRight="45dp"
         android:layout_marginTop="8dp"
-        android:text="3"
-        android:textSize="16sp"
-        android:textColor="@color/lightBlack"
-        app:layout_constraintBottom_toBottomOf="@+id/mobilitySeekBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/mobilitySeekBar"
-        app:layout_constraintTop_toBottomOf="@+id/mobilityTitle"
-        app:layout_constraintVertical_bias="0.333" />
-
-    <CheckBox
-        android:id="@+id/checkBox3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="180dp"
-        android:text="Start måling nu"
-        android:textStyle="normal"
-        android:textColor="@color/lightBlack"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mobilitySeekBar" />
-
-    <Button
-        android:id="@+id/Opret_P"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginRight="100dp"
-        android:layout_marginTop="48dp"
-        android:background="@drawable/opret_patient_knap"
         android:gravity="center"
-        android:padding="8dp"
-        android:text="Opret patient"
-        android:textColor="@color/warmGrey"
-        android:textStyle="bold"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mobilitySeekBar" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/nameText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="66dp"
+            android:text="Opret ny patient"
+            android:textColor="@color/lightBlack"
+            android:textSize="36sp" />
+
+        <TextView
+            android:id="@+id/nameTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="32dp"
+            android:text="@string/nameTitle"
+            android:textColor="@color/lightBlack"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/nameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="37dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="2dp"
+            android:backgroundTint="@color/focused_tint"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="eks. Anders And"
+            android:inputType="textPersonName"
+            android:padding="10dp" />
+
+        <TextView
+            android:id="@+id/idTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/idTitle"
+            android:textColor="@color/lightBlack"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/patientID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="37dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="2dp"
+            android:backgroundTint="@color/focused_tint"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="eks. p3"
+            android:inputType="textPersonName"
+            android:padding="10dp" />
+
+        <TextView
+            android:id="@+id/mobilityTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/mobility"
+            android:textColor="@color/lightBlack"
+            android:textSize="18sp" />
+
+        <SeekBar
+            android:id="@+id/mobilitySeekBar"
+            style="@style/Widget.AppCompat.SeekBar.Discrete"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="26dp"
+            android:layout_marginRight="61dp"
+            android:layout_marginTop="1dp"
+            android:max="4"
+            android:progress="2" />
+
+        <TextView
+            android:id="@+id/mobilityValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="45dp"
+            android:layout_marginTop="8dp"
+            android:text="3"
+            android:textColor="@color/lightBlack"
+            android:textSize="16sp" />
+
+        <CheckBox
+            android:id="@+id/checkBox3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="180dp"
+            android:layout_marginTop="4dp"
+            android:text="Start måling nu"
+            android:textColor="@color/lightBlack"
+            android:textStyle="normal" />
+
+        <Button
+            android:id="@+id/Opret_P"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:layout_marginRight="100dp"
+            android:layout_marginTop="48dp"
+            android:background="@drawable/opret_patient_knap"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="Opret patient"
+            android:textColor="@color/warmGrey"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
