fixes ved opret patient

--- a/app/src/main/res/layout/ny_patient_frag.xml
+++ b/app/src/main/res/layout/ny_patient_frag.xml
@@ -36,7 +36,9 @@
         android:layout_marginTop="8dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:background="@color/eggwhite"
+        android:background="@color/colorBackground"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Navn"
-            android:layout_marginRight="140dp"
+            android:layout_gravity="left"
             android:layout_marginTop="10dp"
             android:textColor="@color/lightBlack"
             android:textSize="18sp" />
@@ -56,9 +58,7 @@
             android:id="@+id/nameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="37dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="37dp"
+            android:layout_gravity="left"
             android:backgroundTint="@color/focused_tint"
             android:ems="10"
             android:hint="eks. Anders And"
@@ -69,7 +69,7 @@
             android:id="@+id/idTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="120dp"
+            android:layout_gravity="left"
             android:text="Patient ID"
             android:textColor="@color/lightBlack"
             android:textSize="18sp" />
@@ -78,9 +78,7 @@
             android:id="@+id/patientID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="37dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="37dp"
+            android:layout_gravity="left"
             android:backgroundTint="@color/focused_tint"
             android:ems="10"
             android:gravity="left"
@@ -92,9 +90,7 @@
             android:id="@+id/mobilityTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginRight="40dp"
+            android:layout_gravity="left"
             android:text="@string/mobility"
             android:textColor="@color/lightBlack"
             android:textSize="18sp" />
@@ -104,9 +100,7 @@
             style="@style/Widget.AppCompat.SeekBar.Discrete"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginLeft="61dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginRight="61dp"
+            android:layout_gravity="center_horizontal"
             android:max="4"
             android:progress="2" />
 
@@ -115,9 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginRight="37dp"
-            android:layout_marginLeft="37dp"
-            android:layout_marginBottom="8dp"
+            android:layout_gravity="center_horizontal"
             android:text="3"
             android:textColor="@color/lightBlack"
             android:textSize="16sp" />
@@ -126,23 +118,18 @@
             android:id="@+id/checkBox3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="37dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="37dp"
+            android:layout_gravity="left"
             android:text="Start måling nu"
             android:textColor="@color/lightBlack"
             android:textStyle="normal" />
 
         <Button
             android:id="@+id/Opret_P"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginRight="100dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:background="@color/colorDarkRed"
-            android:gravity="center"
             android:padding="8dp"
             android:text="Opret patient"
             android:textColor="@color/warmGrey"
