--- a/app/src/main/res/layout/ny_patient_frag.xml
+++ b/app/src/main/res/layout/ny_patient_frag.xml
@@ -29,6 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <LinearLayout
         android:id="@+id/box"
         android:layout_width="match_parent"
@@ -36,13 +37,21 @@
         android:layout_marginTop="8dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:background="@color/colorBackground"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:background="@color/colorDarkRed"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/colorBackground">
 
         <TextView
             android:id="@+id/nameTitle"
@@ -135,7 +144,7 @@
             android:textColor="@color/warmGrey"
             android:textStyle="bold" />
 
-
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
