--- a/app/src/main/res/layout/ny_patient_frag.xml
+++ b/app/src/main/res/layout/ny_patient_frag.xml
@@ -37,7 +37,7 @@
         android:layout_marginTop="8dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:background="@color/colorDarkRed"
+        android:background="@drawable/nypatient_baggrund"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:paddingBottom="5dp"
@@ -47,18 +47,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/colorBackground">
-
         <TextView
             android:id="@+id/nameTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Navn"
             android:layout_gravity="left"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:layout_marginTop="10dp"
             android:textColor="@color/lightBlack"
             android:textSize="18sp" />
@@ -79,6 +75,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:text="Patient ID"
             android:textColor="@color/lightBlack"
             android:textSize="18sp" />
@@ -100,6 +98,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:text="@string/mobility"
             android:textColor="@color/lightBlack"
             android:textSize="18sp" />
@@ -138,13 +138,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
             android:background="@color/colorDarkRed"
             android:padding="8dp"
             android:text="Opret patient"
             android:textColor="@color/warmGrey"
             android:textStyle="bold" />
 
-        </LinearLayout>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
