--- a/app/src/main/res/layout/patient_data_frag.xml
+++ b/app/src/main/res/layout/patient_data_frag.xml
@@ -27,7 +27,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/profil"
@@ -40,8 +40,8 @@
         android:id="@+id/nameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
         android:text="Fornavn Efternavn"
         android:textColor="#ffffff"
         android:textSize="25dp"
@@ -53,10 +53,10 @@
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="0dp"
-        android:layout_height="164dp"
+        android:layout_height="165dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="60dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="11dp"
         android:src="@drawable/patient_ikon"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,15 +79,16 @@
         android:id="@+id/dato_knap"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="287dp"
-        android:layout_marginEnd="55dp"
         android:layout_marginStart="55dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginBottom="287dp"
         android:background="@drawable/edittext_custom"
         android:text="Dato"
         android:textColor="@color/colorWhite"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/actionbar_image" />
 
