--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -32,10 +32,10 @@
         android:layout_marginTop="48dp"
         android:hint="Brugernavn"
         android:paddingLeft="15dp"
-        android:backgroundTint="@color/colorWhite"
+        android:backgroundTint="@color/SENScolorWhite"
         android:radius="60dp"
-        android:textColor="@color/colorWhite"
-        android:textColorHint="@color/colorWhite"
+        android:textColor="@color/SENScolorWhite"
+        android:textColorHint="@color/SENScolorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -47,10 +47,10 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/colorWhite"
+        android:backgroundTint="@color/SENScolorWhite"
         android:hint="Kodeord"
-        android:textColor="@color/colorWhite"
-        android:textColorHint="@color/colorWhite"
+        android:textColor="@color/SENScolorWhite"
+        android:textColorHint="@color/SENScolorWhite"
         android:inputType="textPassword"
         android:paddingLeft="15dp"
         android:selectAllOnFocus="false"
@@ -80,9 +80,9 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="48dp"
         android:checked="false"
-        android:buttonTint="@color/colorWhite"
+        android:buttonTint="@color/SENScolorWhite"
         android:text="Forbliv logget ind"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/SENScolorWhite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logIndKnap" />
 
@@ -94,7 +94,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="136dp"
         android:layout_marginTop="152dp"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/SENScolorWhite"
         android:text="Glemt dit log ind?"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
