--- a/app/src/main/res/drawable/categorizer_previous_data.xml
+++ b/app/src/main/res/drawable/categorizer_previous_data.xml
@@ -13,6 +13,6 @@
         />
     <stroke
         android:width="1dp"
-        android:color="@color/colorWhite"
+        android:color="@color/SENScolorWhite"
         />
 </shape>
