--- a/app/src/main/res/drawable/completed_title_background.xml
+++ b/app/src/main/res/drawable/completed_title_background.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/SENScolorWhite"
+        android:color="@color/SENScolorRed"
         />
     <size
-        android:width="360dp"
-        android:height="70dp"
+        android:width="100dp"
+        android:height="2dp"
         />
     <corners
         android:bottomLeftRadius="10dp"
@@ -14,7 +14,7 @@
         android:topRightRadius="10dp"
         />
     <stroke
-        android:width="1dp"
-        android:color="@color/warmDarkGrey"
+        android:width="0.5dp"
+        android:color="#9c000a"
         />
 </shape>
