--- a/app/src/main/res/drawable/edittext_custom.xml
+++ b/app/src/main/res/drawable/edittext_custom.xml
@@ -3,8 +3,8 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorRed"/>
-            <stroke android:color="@color/colorBlack" android:width="2dp"/>
+            <solid android:color="@color/SENScolorRed"/>
+            <stroke android:color="@color/SENScolorBlack" android:width="2dp"/>
             <corners android:radius="15dp"/>
         </shape>
     </item>
