--- a/app/src/main/res/drawable/opret_patient_knap.xml
+++ b/app/src/main/res/drawable/opret_patient_knap.xml
@@ -15,12 +15,12 @@
                 android:height="50dp"
                 />
             <gradient
-                android:startColor="@color/colorRed"
+                android:startColor="@color/SENScolorRed"
                 android:endColor="@color/colorDarkRed"
                 />
             <stroke
                 android:width="2dp"
-                android:color="@color/colorBlack"
+                android:color="@color/SENScolorBlack"
                 />
         </shape>
 
