--- a/app/src/main/res/drawable/patientinformation_textview.xml
+++ b/app/src/main/res/drawable/patientinformation_textview.xml
@@ -4,8 +4,8 @@
     <item>
 
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorBackground"/>
-            <stroke android:color="@color/colorBlack" android:width="1dp"/>
+            <solid android:color="@color/SENScolorBackground"/>
+            <stroke android:color="@color/SENScolorBlack" android:width="1dp"/>
         </shape>
 
 
