--- a/app/src/main/res/drawable/subsec_progbar.xml
+++ b/app/src/main/res/drawable/subsec_progbar.xml
@@ -3,7 +3,7 @@
     <solid android:color="#04ff00" />
     <stroke
         android:width="0.5dp"
-        android:color="@color/colorRed"
+        android:color="@color/SENScolorRed"
         />
     <size
         android:width="500dp"
