--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -128,6 +128,17 @@
         app:layout_constraintStart_toStartOf="@+id/circlebar"
         app:layout_constraintTop_toTopOf="@+id/circlebar" />
 
+    <TextView
+        android:id="@+id/tasksTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:text="Dagens mål"
+        android:textColor="@color/SENSfontColor"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/circlebar" />
+
     <ListView
         android:id="@+id/completeList"
         android:layout_width="match_parent"
@@ -145,34 +156,53 @@
         android:id="@+id/incompleteList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:divider="@null"
         app:layout_constraintBottom_toTopOf="@+id/completeText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/circlebar" />
+        app:layout_constraintTop_toBottomOf="@+id/tasksTitle" />
 
     <TextView
         android:id="@+id/completeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="----Completed----"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="Gennemført"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/incompleteList" />
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="178dp"
-        tools:layout_editor_absoluteY="107dp">
+    <ImageView
+        android:id="@+id/completedLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="2dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/completeText"
+        app:layout_constraintEnd_toStartOf="@+id/completeText"
+        app:layout_constraintTop_toTopOf="@+id/completeText"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/completed_title_background" />
 
-    </android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/completedRight"
+        android:layout_width="wrap_content"
+        android:layout_height="2dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/completeText"
+        app:layout_constraintStart_toEndOf="@+id/completeText"
+        app:layout_constraintTop_toTopOf="@+id/completeText"
+        app:srcCompat="@drawable/completed_title_background" />
 
 
 </android.support.constraint.ConstraintLayout>
