--- a/app/src/main/res/layout/pop_up_sammentykke.xml
+++ b/app/src/main/res/layout/pop_up_sammentykke.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlack"
+    android:background="@color/SENScolorBlack"
     android:padding="16dp"
     >
 
@@ -44,7 +44,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="184dp"
         android:text="@string/PersData"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/SENScolorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
