--- a/app/src/main/res/layout/swipe_tip.xml
+++ b/app/src/main/res/layout/swipe_tip.xml
@@ -6,7 +6,7 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlack"
+    android:background="@color/SENScolorBlack"
     android:padding="16dp">
 
     <TextView
@@ -29,7 +29,7 @@
         android:gravity="center"
         android:text="Forstået!"
         android:textAllCaps="false"
-        android:background="@color/colorBlack"
+        android:background="@color/SENScolorBlack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
