--- a/app/src/main/res/layout/task_complete.xml
+++ b/app/src/main/res/layout/task_complete.xml
@@ -5,7 +5,7 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlack"
+    android:background="@color/SENScolorBlack"
     android:padding="16dp"
     tools:context=".views.Patient_start_frag">
 
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Godt gået!"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/SENScolorWhite"
             android:textSize="40sp" />
 
         <TextView
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Du har klaret en af dine daglige mål for i dag!"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/SENScolorWhite"
             android:textSize="15sp" />
 
     </LinearLayout>
