--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -182,27 +182,29 @@
     <ImageView
         android:id="@+id/completedLeft"
         android:layout_width="wrap_content"
-        android:layout_height="2dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
+        android:src="@drawable/completed_title_background"
         app:layout_constraintBottom_toBottomOf="@+id/completeText"
         app:layout_constraintEnd_toStartOf="@+id/completeText"
         app:layout_constraintTop_toTopOf="@+id/completeText"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/completed_title_background" />
+        />
 
     <ImageView
         android:id="@+id/completedRight"
         android:layout_width="wrap_content"
-        android:layout_height="2dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:src="@drawable/completed_title_background"
         app:layout_constraintBottom_toBottomOf="@+id/completeText"
         app:layout_constraintStart_toEndOf="@+id/completeText"
         app:layout_constraintTop_toTopOf="@+id/completeText"
-        app:srcCompat="@drawable/completed_title_background" />
+         />
 
 
 </android.support.constraint.ConstraintLayout>
