--- a/app/src/main/res/drawable/completed_title_background.xml
+++ b/app/src/main/res/drawable/completed_title_background.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/SENScolorRed"
+        android:color="@color/eggLightWhiteShadow"
         />
     <size
-        android:width="100dp"
+        android:width ="100dp"
         android:height="2dp"
         />
     <corners
-        android:bottomLeftRadius="10dp"
+        android:bottomLeftRadius ="10dp"
         android:bottomRightRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        />
-    <stroke
-        android:width="0.5dp"
-        android:color="#9c000a"
+        android:topLeftRadius    ="10dp"
+        android:topRightRadius   ="10dp"
         />
 </shape>
