--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,12 +5,15 @@
     <color name="colorAccent">#FF4081</color>
     <color name="Beige">#FFFCF7</color>
 
+    <color name="eggLightwhite">#ffffff</color>
     <color name="eggwhite">#F3F1F1</color>
+    <color name="eggLightWhiteShadow">#eaeaea</color>
+    <color name="eggwhiteShadow">#bfbebe</color>
+    <color name="darkEggwhite">#847d78</color>
+
     <color name="warmLightGrey">#f5f3f0</color>
     <color name="warmGrey">#e8e3de</color>
     <color name="warmDarkGrey">#ccc3b9</color>
-    <color name="eggwhiteShadow">#bfbebe</color>
-    <color name="darkEggwhite">#847d78</color>
     <color name="lightBlack">#484848</color>
 
     <color name="colorDarkRed">#9f1717</color>
