--- a/app/src/main/res/drawable/patientliste_baggrund.xml
+++ b/app/src/main/res/drawable/patientliste_baggrund.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:endColor="@color/SENScolorWhite"
-        android:centerColor="@color/eggLightWhiteShadow"
-        android:startColor="@color/warmGrey" />
+        android:endColor="#9c1b1b"
+        android:centerColor="#ac1818"
+        android:startColor="@color/loginBottomGradient" />
     <size
         android:width="300dp"
         android:height="70dp"
