Rettet farver i patient settings

--- a/app/src/main/res/layout/patient_setting_frag.xml
+++ b/app/src/main/res/layout/patient_setting_frag.xml
@@ -27,7 +27,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="7dp"
         android:text="Indstillinger"
-        android:textColor="#ffffff"
+        android:textColor="@color/SENScolorWhite"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -54,8 +54,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="64dp"
         android:text="Din Profil"
+        android:textColor="@android:color/black"
         android:textSize="23sp"
-        android:textColor="@color/darkEggwhite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -110,7 +110,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:text="Notifikationer"
-        android:textColor="@color/darkEggwhite"
+        android:textColor="@android:color/black"
         android:textSize="23sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/column2" />
@@ -147,12 +147,12 @@
         android:id="@+id/popupText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Pop-up notifikationer"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
-        android:textColor="@color/lightBlack"
         app:layout_constraintBottom_toBottomOf="@+id/column4"
         app:layout_constraintStart_toStartOf="@+id/column4"
         app:layout_constraintTop_toTopOf="@+id/column4" />
@@ -161,11 +161,11 @@
         android:id="@+id/soundEffects"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Lyd effekter"
-        android:textColor="@color/lightBlack"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/column5"
         app:layout_constraintStart_toStartOf="@+id/column5"
@@ -213,11 +213,11 @@
         android:id="@+id/popupText4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Terapeut oplysninger"
-        android:textColor="@color/lightBlack"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/column2"
         app:layout_constraintStart_toStartOf="parent"
@@ -227,14 +227,14 @@
 
     <TextView
         android:id="@+id/popupText3"
-       android:layout_width="wrap_content"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="8dp"
-    android:text="Skift sprog"
-    android:textColor="@color/lightBlack"
-    android:textSize="18sp"
+        android:text="Skift sprog"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/column3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/column3" />
@@ -243,11 +243,11 @@
         android:id="@+id/popupText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Opdater brugeroplysninger"
-        android:textColor="@color/lightBlack"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/column3"
         app:layout_constraintStart_toStartOf="parent"
